# dexsent_task1

./: Readme.md
src/dexsent_task1/: CMakeLists.txt  package.xml
src/dexsent_task1/urdf/: crx10ia_robotiq.urdf
src/dexsent_task1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/dexsent_task1_moveit_config/config/: crx10ia_robotiq.srdf  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml
src/dexsent_task1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  task1_manual.launch.py  task1_run.launch.py  warehouse_db.launch.py
